Migration to Bzlmod

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -5,7 +5,7 @@ cc_test(
     srcs = ["cpplib_test.cc"],
     deps = [
         "//src/lib:CPPLib",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -14,7 +14,7 @@ cc_test(
     srcs = ["search_test.cc"],
     deps = [
         "//src/lib/search:SearchLib",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -22,7 +22,7 @@ cc_test(
     name = "test_fixture",
     srcs = ["test_fixture.cc"],
     deps = [
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -30,7 +30,7 @@ cc_test(
     name = "gmock",
     srcs = ["gmock.cc"],
     deps = [
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -38,7 +38,7 @@ cc_test(
     name = "gmock2",
     srcs = ["gmock2.cc"],
     deps = [
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -46,7 +46,7 @@ cc_test(
     name = "findmax_test",
     srcs = ["findmax_test.cc"],
     deps = [
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -54,7 +54,7 @@ cc_test(
     name = "hello_world_test",
     srcs = ["hello_world_test.cc"],
     deps = [
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -62,7 +62,7 @@ cc_binary(
     name = "hello_world_test_main",
     srcs = ["hello_world_test_main.cc"],
     deps = [
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -70,7 +70,7 @@ cc_test(
     name = "fib_test",
     srcs = ["fib_test.cc"],
     deps = [
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -78,7 +78,7 @@ cc_test(
     name = "sort_test_function",
     srcs = ["sort_test_function.cc"],
     deps = [
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -86,7 +86,7 @@ cc_test(
     name = "test_fixture_shared_resources",
     srcs = ["test_fixture_shared_resources.cc"],
     deps = [
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -94,7 +94,7 @@ cc_test(
     name = "sort_test_function_test_param",
     srcs = ["sort_test_function_test_param.cc"],
     deps = [
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -102,6 +102,6 @@ cc_test(
     name = "sort_test_function_share_test_logic",
     srcs = ["sort_test_function_share_test_logic.cc"],
     deps = [
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest_main",
     ],
 )
