--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -8,6 +8,7 @@ module(name = "cpp-template", version = "1.0")
 
 bazel_dep(name = "rules_cc", version = "0.0.12")
 
+bazel_dep(name = "googletest", version = "1.14.0")
 bazel_dep(name = "glog", version = "0.7.1")
 bazel_dep(name = "gflags", version = "2.2.2")
 bazel_dep(name = "abseil-cpp", version = "20250512.0")
