--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -6,9 +6,10 @@
 ###############################################################################
 module(name = "cpp-template", version = "1.0")
 
-bazel_dep(name = "rules_cc", version = "0.0.12")
-
-bazel_dep(name = "googletest", version = "1.14.0")
+bazel_dep(name = "rules_cc", version = "0.1.1")
+ 
+bazel_dep(name = "googletest", version = "1.17.0")
+bazel_dep(name = "google_benchmark", version = "1.8.3")
 bazel_dep(name = "glog", version = "0.7.1")
 bazel_dep(name = "gflags", version = "2.2.2")
 bazel_dep(name = "abseil-cpp", version = "20250512.0")
